# tree-sitter-clojure

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-clojure.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_clojure/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterClojure/: clojure.h
bindings/swift/TreeSitterClojureTests/: TreeSitterClojureTests.swift
src/: grammar.json  parser.c
test/corpus/: param-tags-metadata.txt  qualified-methods.txt  symbolic-array-type-representation.txt
