[package]
name = "tree-sitter-clojure"
description = "Clojure grammar for tree-sitter"
version = "0.0.14"
authors = [""]
license = "COPYING.txt"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "clojure"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/sogaiu/tree-sitter-clojure"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
