[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-clojure"
description = "Clojure grammar for tree-sitter"
version = "0.0.14"
keywords = ["incremental", "parsing", "tree-sitter", "clojure"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "sogaiu" }]
requires-python = ">=3.10"
license.text = "COPYING.txt"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/yogthos/tree-sitter-clojure"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
